--- a/index.html
+++ b/index.html
@@ -25,21 +25,7 @@
         <div class="heading">
           <h2>Timers</h2>
         </div>
-        <div class="food-items">
-          <div class="timer-row">
-            <!-- <div class="animated-emoji">👍</div>
-            <br /> -->
-            <div class="food-name">Gammon</div>
-            <div class="food-timer">
-              <p class="timer-hours">00</p>
-              <p class="timer-separator">:</p>
-              <p class="timer-minutes">00</p>
-              <p class="timer-separator">:</p>
-              <p class="timer-seconds">00</p>
-            </div>
-            <div class="start-btn"><i class="fas fa-play"></i></div>
-          </div>
-        </div>
+        <div class="food-items"></div>
 
         <div class="add-item-section">
           <div class="add-btn">
