--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Oven Timer App</h1>
+    <h1 class="app-heading">Oven Timer App</h1>
 
     <main>
       <div class="app">
-        <div class="heading">
+        <!-- <div class="heading">
           <h2>Timers</h2>
-        </div>
+        </div> -->
         <div class="food-items"></div>
 
         <div class="add-item-section">
