--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/0564e4543e.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -38,6 +39,7 @@
                   id="foodname"
                   name="foodname"
                   value=""
+                  required
                 />
                 <label class="form-label" for="hours">Hours:</label>
                 <input class="form-input" type="number" id="hours" name="hours" value="" />
@@ -48,6 +50,7 @@
                   id="minutes"
                   name="minutes"
                   value=""
+                  required
                 />
                 <label class="form-label" for="seconds">Seconds:</label>
                 <input
@@ -56,6 +59,7 @@
                   id="seconds"
                   name="seconds"
                   value=""
+                  required
                 />
                 <button class="submit-btn" type="submit">Submit</button>
               </form>
