added app subdeck

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="app-heading">Oven Timer App</h1>
+    <h1 class="app-heading">Oven Timer</h1>
+    <h2 class="app-subdeck">Track multiple food preparations</h2>
 
     <main>
       <div class="app">
